// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`navbar :base 1`] = `
<main>
  <wx-view
    class="t-navbar t-navbar--fixed t-navbar--visible-animation class t-class"
    style=""
  >
    <wx-view
      class="t-navbar__placeholder"
    />
    <wx-view
      class="t-navbar__content"
    >
      <wx-view
        class="t-navbar__left t-class-left"
      >
        <wx-view
          class="t-navbar__left t-class-left"
        >
          <wx-view
            class="t-navbar__capsule t-class-capsule"
          />
        </wx-view>
        <wx-view
          class="t-navbar__center t-class-center"
        >
          test
        </wx-text>
      </wx-view>
    </wx-view>
  </wx-view>
</main>
`;

exports[`navbar :base 2`] = `
<main>
  <wx-view
    class="t-navbar t-navbar--fixed t-navbar--hide-animation class t-class"
    style=""
  >
    <wx-view
      class="t-navbar__placeholder"
    />
    <wx-view
      class="t-navbar__content"
    >
      <wx-view
        class="t-navbar__left t-class-left"
      >
        <wx-view
          class="t-navbar__left t-class-left"
        >
          <wx-view
            class="t-navbar__capsule t-class-capsule"
          />
        </wx-view>
        <wx-view
          class="t-navbar__center t-class-center"
        >
          test
        </wx-text>
      </wx-view>
    </wx-view>
  </wx-view>
</main>
`;

exports[`navbar :base 3`] = `
<main>
  <wx-view
    class="t-navbar t-navbar--fixed t-navbar--hide class t-class"
    style=""
  >
    <wx-view
      class="t-navbar__placeholder"
    />
    <wx-view
      class="t-navbar__content"
    >
      <wx-view
        class="t-navbar__left t-class-left"
      >
        <wx-view
          class="t-navbar__left t-class-left"
        >
          <wx-view
            class="t-navbar__capsule t-class-capsule"
          />
        </wx-view>
        <wx-view
          class="t-navbar__center t-class-center"
        >
          test
        </wx-text>
      </wx-view>
    </wx-view>
  </wx-view>
</main>
`;

exports[`navbar :fixed 1`] = `
<main>
  <wx-view
    class="t-navbar t-navbar--fixed t-navbar--visible-animation class t-class"
    style=""
  >
    <wx-view
      class="t-navbar__placeholder"
    />
    <wx-view
      class="t-navbar__content"
    >
      <wx-view
        class="t-navbar__left t-class-left"
      >
        <wx-view
          class="t-navbar__left t-class-left"
        >
          <wx-view
            class="t-navbar__capsule t-class-capsule"
          />
        </wx-view>
        <wx-view
          class="t-navbar__center t-class-center"
        >
          test
        </wx-text>
      </wx-view>
    </wx-view>
  </wx-view>
</main>
`;

exports[`navbar :menu button 1`] = `
<main>
  <wx-view
    class="t-navbar t-navbar--fixed  class t-class"
    style="--td-navbar-padding-top:20px; --td-navbar-right:414px; --td-navbar-capsule-height: 10px; --td-navbar-capsule-width:40px;"
  >
    <wx-view
      class="t-navbar__placeholder"
    />
    <wx-view
      class="t-navbar__content"
    >
      <wx-view
        class="t-navbar__left t-class-left"
      >
        <wx-view
          class="t-navbar__left t-class-left"
        >
          <wx-view
            class="t-navbar__capsule t-class-capsule"
          />
        </wx-view>
        <wx-view
          class="t-navbar__center t-class-center"
        >
          test
        </wx-text>
      </wx-view>
    </wx-view>
  </wx-view>
</main>
`;
